Fix style on mobile

--- a/front/sass/_aside.scss
+++ b/front/sass/_aside.scss
@@ -9,11 +9,14 @@ body > aside {
         }
         padding-bottom: 1rem;
     }
-    & .about p {
-        max-width: 40vh;
+    & p {
+        @include media-breakpoint-up(lg) {
+            max-width: 40vh;
+        }
         padding-left: 2rem;
         text-align: justify;
     }
+
     & ul.personal_information {
         display: flex;
         flex-direction: column;
